fix overflow problem

--- a/style/modelAtome.css
+++ b/style/modelAtome.css
@@ -89,9 +89,13 @@ hr::after {
     } 
     div.right {
         flex-flow: column wrap;
+
+        width: 100%;
     }
     div.left {
         flex-flow: column wrap;
+        
+        width: 100%;
     }
     p.content {
         font-size: 2.25vh;
